# python-project-template

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
tests/unit/: test_main.py
